GTK: Don't send double/triple click events to renderer.

This goes along with webkit bug: https://bugs.webkit.org/show_bug.cgi?id=31841

BUG=17466

Review URL: http://codereview.chromium.org/431031

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@32998 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 70fc3569e0d4eae1c02705b04c857c3933007393